# ai-coe

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  amplify.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-vercel.yml
agents/lib/: base_agent.py  bedrock_client.py  cost_cap.py  logging.py  metrics.py  models.py  registry.py
agents/orchestrator/: Dockerfile  __init__.py  agent_01_chat.py  cache.py  models.py  refresh.py  server.py  sessions.py
ai_docs/: brief.md  design.md  post-demo-plan.md
ai_docs/tasks/: 00_foundation.md  01_wave1_vault_seed_content.md  02_wave1_chat_orchestrator.md  03_wave1_asset_library.md  04_wave1_personal_dashboard.md  05_wave2_maturity_assessment.md  06_wave2_kit_builder.md  06b_app_shell_navigation.md  06c_wave1_2_ui_alignment.md  07_wave2_universal_asset_qa.md  08_wave3_governance_checker.md  09_wave3_ethics_checker.md  10_wave3_compliance_tracker.md  11_wave4_skills_tools_repo.md  12_wave4_vendor_eval.md  13_wave4_prompt_studio.md  14_wave4_qa.md  15_wave5_intelligence_feed.md  16_wave5_use_case_ideation.md  16b_wave5_agentic_skills_plugin_exchange.md  16c_wave5_ai_roi_calculator.md  16d_wave5_ai_sow_generator.md  16e_wave5_vendor_vetting.md  17_wave5_decision_log.md  18_wave5_project_health.md  19_wave5_retrospective.md  20_wave5_benchmark.md  21_wave6_client_report.md  22_wave6_community_hub.md  23_wave6_knowledge_contribution.md  24_wave6_onboarding.md  24b_wave6_trainings.md  25_wave6_certification.md  26_wave6_analytics.md  27_wave7_code_accelerator.md  INDEX.md
docs/starters/: AI CoE Platform Brief.md
docs/templates/: 01_brainstorm_brief.md  02_generate_implementation_plan.md  02a_generate_system_design.md  02b_generate_ui_requirements.md  03_generate_tasks.md  CLAUDE.md.template  README.md  karpathy-guidelines.md
infra/: app.py  cdk.json  pyproject.toml  requirements.txt
infra/scripts/: create_vector_index.py
infra/stacks/: agents.py  agents_fargate.py  config.py  events.py  frontend.py  guardrails.py  iam.py  observability.py  storage.py
scripts/: validate_vault.py  verify_retrieval.py
ui-designs/: README.md  design-system.md
ui-designs/designs/: AI Maturity Assessment.html  App Shell (1).html  Asset Detail (1).html  Asset Library Browse (1).html  Copilot (1).html  Copilot Dock (offline).html  Dashboard Home.html  Engagement Kit Builder.html  Login (1).html  Login Backgrounds.html  Login States.html
ui-designs/pages/: 01-login.md  02-app-shell.md  03-chat-dock.md  04-asset-library.md  05-asset-detail.md  06-dashboard.md  07-maturity-assessment.md  08-kit-builder.md  09-asset-qa.md  10-governance-checker.md  11-ethics-checker.md  12-compliance-tracker.md  13-tools-repository.md  14-vendor-eval.md  15-prompt-studio.md  (+14 more)
vault/: agents.md  modules.json
web/: .env.example  package.json  pnpm-lock.yaml  proxy.ts
(+409 files in other folders)
