[project]
name = "aicoe-infra"
version = "0.1.0"
description = "AI CoE Platform — AWS CDK (Python) infrastructure"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
